--- a/source/drupal/var/drupal-config/sync/facets.facet.networks.yml
+++ b/source/drupal/var/drupal-config/sync/facets.facet.networks.yml
@@ -1,17 +1,17 @@
-uuid: b598aedb-7507-4cf9-b4d0-4d3b5fc93126
+uuid: a786109b-406a-41c8-aa4f-6bcc81635806
 langcode: en
 status: true
 dependencies:
   module:
     - mm_rest
     - node
-id: network
-name: Network
-url_alias: network
-weight: 1
+id: networks
+name: 'Network » Network » Station Name'
+url_alias: networks
+weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: field_show_network
+field_identifier: networks
 facet_source_id: 'mm_rest:spectrum_rest_searchshows_v1'
 widget:
   type: array
@@ -43,11 +43,6 @@ processor_configs:
       sort: -10
     settings:
       sort: ASC
-  translate_entity:
-    processor_id: translate_entity
-    weights:
-      build: 5
-    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
