--- a/source/frontend/staticRoot/api/page/resources/knowledge-center.json
+++ b/source/frontend/staticRoot/api/page/resources/knowledge-center.json
@@ -50,7 +50,7 @@
 		  "marginTop": 0,
 		  "filters": [
 			{
-			  "type": 0,
+			  "type": "category",
 			  "label": "Category",
 			  "options": [
 				{
@@ -76,7 +76,7 @@
 			  ]
 			},
 			{
-			  "type": 1,
+			  "type": "thought_leadership",
 			  "label": "Thought Leadership",
 			  "options": [
 				{
@@ -98,7 +98,7 @@
 			  ]
 			},
 			{
-			  "type": 2,
+			  "type": "product",
 			  "label": "Product",
 			  "options": [
 				{
@@ -116,7 +116,7 @@
 			  ]
 			},
 			{
-			  "type": 3,
+			  "type": "document_type",
 			  "label": "Document Type",
 			  "options": [
 				{
